# minimind_gurren

./: .gitignore  README.md  benchmark_alignment_ablation.py  benchmark_arch_ablation.py  benchmark_inference.py  benchmark_optimizer_ablation.py  data_process_pro.py  eval_llm.py  export_model.py  minimind_SFT.pbs  minimind_eva.pbs  minimind_pre.pbs  minimind_pretrain.o7297565  minimind_pretrain.o7297566  minimind_sft.o7297568  pyproject.toml
dataset/: raw_data.jsonl
model/: model_minimind.py
scripts/: experiment_activations.py
trainer/: train_dpo.py  train_grpo.py  train_pretrain.py
